# tenfabric

./: .gitignore  CLAUDE.md  LICENSE  README.md  TESTING.md  pyproject.toml
PRPs/: roadmap.md
ai_docs/: architecture.md  extending.md  module-reference.md  patterns.md  testing.md
docs/: infra-skypilot.md  skypilot-runpod.md  training-pipeline.md
docs/examples/: README.md
docs/examples/01-first-finetune/: tenfabric.yaml  train.py
docs/examples/02-instruction-tuning/: tenfabric.yaml  train.py
docs/examples/03-code-assistant/: tenfabric.yaml  train.py
docs/examples/04-custom-dataset/: tenfabric.yaml  train.py
docs/examples/05-dpo-alignment/: tenfabric.yaml  train.py
docs/examples/06-cloud-runpod/: guide.md  tenfabric.yaml
src/tenfabric/: __init__.py
src/tenfabric/cli/: app.py  cost.py  doctor.py  examples.py  init.py  models.py  status.py  train.py
src/tenfabric/config/: __init__.py  defaults.py  loader.py  schema.py
src/tenfabric/core/: pipeline.py  run_store.py
src/tenfabric/infra/: base.py  gpu_advisor.py  local.py  skypilot.py
src/tenfabric/training/: data.py  export.py  trl_backend.py  unsloth_backend.py
src/tenfabric/workflows/: activities.py  client.py  training_pipeline.py  worker.py
tests/: test_cli.py  test_config.py  test_config_edge_cases.py  test_data.py  test_defaults.py  test_gpu_advisor.py  test_infra.py  test_run_store.py  test_skypilot_config.py
